# ibilcOS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  flake.nix  limine.cfg
